# debate-bot

./: .gitignore  Cargo.toml  README.md
src/: data.rs  events.rs  main.rs  settings.rs  structs.rs
src/commands/: ping.rs  shutdown.rs
